--- a/templates/tournament/team_standings.html
+++ b/templates/tournament/team_standings.html
@@ -9,7 +9,7 @@
             <i class="fas fa-users me-2"></i>{{ tournament.name }} - Team Standings
         </h1>
         <div>
-            <a href="{{ url_for('tournament.view_tournament', tournament_id=tournament.id) }}" class="btn btn-outline-secondary">
+            <a href="{{ url_for('tournament.view', tournament_id=tournament.id) }}" class="btn btn-outline-secondary">
                 <i class="fas fa-arrow-left me-1"></i> Back to Tournament
             </a>
             <button class="btn btn-outline-primary ms-2" onclick="window.print()">
